Fix flicker with share button.
* preventDefault() fixes this.
* Still more issues with the scale animation. Webkit browsers still
show full scale (1) before immediately moving to 0 to do the animation
resulting in flicker. Removed the animation altogether, a simple fadeIn
will have to do…

--- a/themes/default/media/css/less/styles.less
+++ b/themes/default/media/css/less/styles.less
@@ -1714,13 +1714,6 @@ div.modal-window {
    margin: 3.125%;
 }
 
-.visible div.modal-window {
-    -moz-animation-duration: .5s;
-    -moz-animation-name: modalPop;
-    -webkit-animation-duration: .5s;
-    -webkit-animation-name: modalPop;
-}
-
 div#modal-container article.modal {
    -moz-box-shadow: 0 2px 5px rgba(0,0,0,.45);
    -webkit-box-shadow: 0 2px 5px rgba(0,0,0,.45);
